Revised: Chattr GUI
Remastered GUI when going to the chatting screen. Waiting for homepage to complete.

NOT YET:
> File Upload (delivery.js).
> Change/Create Room.

--- a/html/chattr.html
+++ b/html/chattr.html
@@ -1,76 +1,32 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <!-- CSS HERE -->
-    <link href="node_modules/bootstrap/dist/css/bootstrap.css" rel="stylesheet" type="text/css">
-    <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+    <!-- JavaScripts -->
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
+    <script type="text/javascript" src="../js/client.js"></script>
+    <!-- YOU NEED TO THIS IN INDEX (HOME) -->
+    <!-- <script>
+        // GLOBAL VARIABLES
+        var socket = io();
+        var sender;
+        socket.on('connect', function() {
+            sender = socket.id;
+        });
+    </script> -->
+
+    <!-- CSS -->
+    <link href="../node_modules/bootstrap/dist/css/bootstrap.css" rel="stylesheet" type="text/css">
+    <link href="../node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="/css/chatbubble.css">
+    <link rel="stylesheet" type="text/css" href="../css/chatbubble.css">
   </head>
   <body>
     <p>Chat Log:</p>
     <div id="messages"></div>
-    <form id="messageEntry">
-      <input class="border rounded-pill col-md-10" id="m" autocomplete="off" placeholder="Send a message...."/>
-      <button class="btn btn-success fa fa-paper-plane border rounded-pill col-md-1 container-fluid"> Send</button>
+    <form id="messageForm">
+      <input class=" col-md-10" style="border-radius: .4em;" id="messageBox" autocomplete="off" placeholder="Send a message...."/>
+      <button class="btn btn-success fa fa-paper-plane col-md-1 container-fluid" style="border-radius: .4em;">Send</button>
     </form>
-    <script>
-      $(function () {
-        // Send Button Listener
-        $('#messageEntry').submit(function(e) {
-          e.preventDefault();
-          socket.emit('chat message', $('#m').val());
-          $('#m').val('');
-          return false;
-        });
-
-        // If user sends message
-        socket.on('chat message', function(username, id, msg) {
-          console.log(socketId, id);
-          if (id == socketId) {
-            $('#messages').append(
-              $('<div class="speech-bubble right">')
-                .append([
-                  $('<span class="username"/>').text(username),
-                  $('<div style="border: 1px solid rgba(0,0,0,0.2);"/>'),
-                  $('<span class="content"/>').text(msg)
-                ])
-            );
-          } else {
-            $('#messages').append(
-              $('<div class="speech-bubble left">')
-                .append([
-                  $('<span class="username"/>').text(username),
-                  $('<div style="border: 1px solid rgba(0,0,0,0.2);"/>'),
-                  $('<span class="content"/>').text(msg)
-                ])
-            );
-          }
-          //$('#messages').append($('<li>').text(username + '@' + id + "> " + msg));
-          window.scrollTo(0, document.body.scrollHeight);
-        });
-
-        // If user changes username
-        socket.on('username change', function(oldUsername, newUsername) {
-          $('#messages').append($('<li>').html('<i><b>' + oldUsername + '</b>' + ' has changed his/her username to ' + '<b>' + newUsername + '</b></i>'));
-          window.scrollTo(0, document.body.scrollHeight);
-        });
-
-        // If user disconnects
-        socket.on('client disconnect', function(username) {
-          $('#messages').append($('<li>').html('<i><b>' + username + '</b>' + ' has gone offline.</i>'));
-        });
-
-        // If user joins room
-        socket.on('room join', function(username) {
-          $('#messages').append($('<li>').html('<i><b>' + username + '</b>' + ' has joined the room.</i>'));
-        });
-
-        // If user leaves room
-        socket.on('room leave', function(username) {
-          $('#messages').append($('<li>').html('<i><b>' + username + '</b>' + ' has left the room.</i>'));
-        });
-      });
-    </script>
   </body>
 </html>
