--- a/html/index.html
+++ b/html/index.html
@@ -1,112 +1,153 @@
 <!DOCTYPE html>
 
 <html>
-  <head>
-    <title>Chattr!</title>
-    <script src="/socket.io/socket.io.js"></script>
-    <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
-    <script>
-      // GLOBAL VARIABLES
-      var socket = io();
-      var socketId;
-      socket.on('connect', function() {
-        socketId = socket.id;
-      });
-    </script>
-    <link href="node_modules/bootstrap/dist/css/bootstrap.css" rel="stylesheet" type="text/css">
-    <style>
-      /* FADEIN/OUT TEMPLATE */
-      .elementToFadeInAndOut {
-        color: lime;
-        -webkit-animation: fadeinout 1s infinite;
-        animation: fadeinout 1s infinite;
-      }
+    <head>
+        <title>Chattr!</title>
 
-      @-webkit-keyframes fadeinout {
-        100% { opacity: 1; }
-        50% { opacity: 0; }
-        0% { opacity: 1; }
-      }
+        <!-- JavaScripts -->
+        <script src="/socket.io/socket.io.js"></script>
+        <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+        <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+        <script type="text/javascript" src="../js/client.js"></script>
+        <script>
+            // GLOBAL VARIABLES
+            var socket = io();
+            var sender;
+            socket.on('connect', function() {
+                sender = socket.id;
+            });
+        </script>
 
-      @keyframes fadeinout {
-        100% { opacity: 0; }
-        0% { opacity: 1; }
-      }
-    </style>
-  </head>
+        <!-- CSS -->
+        <link href="../node_modules/bootstrap/dist/css/bootstrap.css" rel="stylesheet" type="text/css">
+        <link href="../node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+        <link rel="stylesheet" type="text/css" href="../css/chattr.css">
+    </head>
 
-  <body>
-    <div class="container-fluid bg-dark text-white pt-16px" id="topDiv">
-      <div class="container-fluid col-sm">
-        <span style="font-family: 'Consolas', Courier, monospace; font-size: 36px; color: lime;">> Chattr!</span>
-        <span class="elementToFadeInAndOut" style="font-family: 'Consolas', Courier, monospace; font-size: 36px;">_</span>
-      </div>
-      <div class="container-fluid col-sm">
-        <button class="btn btn-success" id="usernameButton">Change Username</button>
-        <button class="btn btn-success" id="roomButton">Change Room</button><br>
-      </div>
-      <div class="container-fluid col-sm text-right">
-        <span>You are chatting as: </span>
-        <span style="color: lime;" id="currentUsername"></span>
-      </div>
-    </div>
+    <body>
+        <!-- <div id="header" class="header container-fluid bg-dark">
+            <span class="title">> Waiting for Homepage</span>
+            <span class="title fade">_</span>
+        </div> -->
+        <nav class="navbar navbar-expand-md navbar-dark bg-dark text-white">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="#" onclick="changeName()">Debug: Change Name</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#" onclick="changeRoom()">Debug: Change Room</a>
+                </li>
+            </ul>
+        </nav>
 
-    <div class="row"
-      style="padding-left: 32px; padding-right:32px; padding-top: 32px;">
-      <div class="container-fluid bg-light text-black border rounded col-md-2"
-        style="margin-right: 16px;">
-        <!-- <p>User(s) in Room:</p>
-        <ul id="onlineRoomUsers"></ul> -->
-        <p>Global Online User(s):</p>
-        <ul id="onlineUsers"></ul>
-      </div>
-  
-      <div class="container-fluid bg-light text-black border rounded col"
-        style="margin-left: 16px;">
-        <span>Current Room: </span>
-        <span id="currentRoom" style="font-weight: bold;">world</span>
-        <div id="canvas"></div>
-      </div>
-    </div>
+        <div class="container-fluid">
+            <div class="row">
+                <div id="messages" class="messageContainer bg-secondary col-10"></div>
+                <div id="userListContainer" class="userListContainer bg-dark col-2">
+                    <div class="card text-center bg-secondary text-white">
+                        <div class="card-body">
+                            <h5 class="card-title">Current Room</h5>
+                            <p id="roomName" class="card-text text-success"></p>
+                            <!-- <a href="#" class="btn btn-primary" onclick="changeRoom()">Change</a> -->
+                        </div>
+                        <div class="btn-group dropdown">
+                            <button type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Create
+                            </button>
+                            <form class="dropdown-menu p-4"
+                                    oninput='confirmation.setCustomValidity(pwd.value != confirmation.value ? "Passwords do not match." : "")'>
+                                <div class="form-group">
+                                    <label for="roomID">Room ID:</label>
+                                    <input type="text" class="form-control" id="roomIdOnCreate" placeholder="Chattr">
+                                </div>
+                                <div class="form-group">
+                                    <label for="roomPassword">Password</label>
+                                    <input name="pwd" type="password" class="form-control" id="roomPasswordOnCreate" placeholder="Password">
+                                </div>
+                                <div class="form-group">
+                                    <label for="roomPassword">Confirm Password</label>
+                                    <input name="confirmation" type="password" class="form-control" id="roomPasswordConfirmation" placeholder="Password">
+                                </div>
+                                <button type="submit" class="btn btn-primary">Create</button>
+                            </form>
+                        </div>
+                        <div class="btn-group dropdown">
+                            <button type="button" class="btn btn-warning dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Change
+                            </button>
+                            <form class="dropdown-menu p-4"
+                                    oninput='confirmation.setCustomValidity(pwd.value != confirmation.value ? "Passwords do not match." : "")'>
+                                <div class="form-group">
+                                    <label for="roomIdOnChange">Room ID:</label>
+                                    <input type="text" class="form-control" id="roomID" placeholder="Chattr">
+                                </div>
+                                <div class="form-group">
+                                    <label for="roomPassword">Password (If Needed):</label>
+                                    <input name="pwd" type="password" class="form-control" id="roomPasswordOnChange" placeholder="Password">
+                                </div>
+                                <div class="form-check">
+                                    <input type="checkbox" 
+                                        class="form-check-input" 
+                                        id="getMessageHistory"
+                                        data-toggle="tooltip"
+                                        data-placement="bottom"
+                                        title="If checked, all messages from that room that are stored in the database will be loaded upon entry.">
+                                    <label class="form-check-label" for="getMessageHistory">
+                                        Get Message History?
+                                    </label>
+                                </div>
+                                <br>
+                                <button type="submit" class="btn btn-primary">Create</button>
+                            </form>
+                        </div>
+                    </div>
+                    <div class="card text-center bg-secondary text-white" style="margin-top: 32px;">
+                        <div class="card-body">
+                            <h5 class="card-title">Online Users:</h5>
+                        </div>
+                        <ul id="userList" class="list-group list-group-flush bg-secondary">
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+        
+        <form id="messageForm" class="messageForm input-group bg-dark">
+            <input class="form-control" style="border-radius: .4em;" id="messageBox" autocomplete="off" placeholder="Send a message...."/>
+            <span class="input-group-btn">
+                <button type="submit" class="btn btn-success" style="border-radius: .4em; margin-left: 8px;">Send</button>
+                <button type="button"
+                    class="btn btn-primary fa fa-paperclip"
+                    style="border-radius: .4em; margin-left: 8px;"
+                    data-toggle="modal"
+                    data-target="#uploadModal"
+                    title="Upload A File"></button>
+            </span>
+        </form>
 
-    <script>
-      $(function() {
-        $('#canvas').load("chattr.html");
-
-        $('#usernameButton').click(function(e) {
-          e.preventDefault();
-          let newUsername = prompt("Choose your username:");
-          socket.emit('username change', newUsername);
-          socket.emit('username refresh', newUsername);
-          $('#currentUsername').text(newUsername + '@' + socket.id);
-        });
-
-        $('#roomButton').click(function(e) {
-          e.preventDefault();
-          var roomID = prompt("Insert Room ID:");
-          socket.emit('change room', roomID);
-          $('#messages').empty();
-          $('#messages').append($('<li>').html('<i>Joined room <b>' + roomID + '</b>.</i>'));
-          $('#currentRoom').text(roomID);
-        });
-
-        socket.on('pass online users', function(onlineUsers, usersInRoom) {
-          $('#onlineUsers').empty();
-          $('#onlineRoomUsers').empty();
-          for(let id in onlineUsers) {
-            $('#onlineUsers').append($('<li>').text(onlineUsers[id] + '@' + id));
-          }
-          for(let user in usersInRoom) {
-            $('#onlineRoomUsers').append($('<li>').text(onlineUsers[user.id] + '@' + user.id));
-          }
-        });
-
-        socket.on('user enter', function(id) {
-          let newUsername = prompt("Choose your username:");
-          socket.emit('username refresh', newUsername);
-          $('#currentUsername').text(newUsername + '@' + id);
-        });
-      });
-    </script>
-  </body>
+        <!-- File Input (Upload) Modal -->
+        <div class="modal fade" id="uploadModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-lg" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">Upload File</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body container-fluid">
+                        <div class="col-sm">
+                            <form method="post" action="#" id="#">
+                                <div class="form-group files color">
+                                    <input type="file" class="form-control" multiple="">
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </body>
 </html>
