File Upload/Download DONE

--- a/html/index.html
+++ b/html/index.html
@@ -6,10 +6,11 @@
 
         <!-- JavaScripts -->
         <script src="/socket.io/socket.io.js"></script>
-        <script src="node_modules/jquery/dist/jquery.js"></script>
+        <script src="/node_modules/jquery/dist/jquery.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-        <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-        <script src="node_modules/delivery/lib/client/delivery.js"></script>
+        <script src="/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+        <script src="/node_modules/delivery/lib/client/delivery.js"></script>
+        <script src="/js/download.js"></script>
         <script type="text/javascript" src="../js/client.js"></script>
         <script>
             
