--- a/html/index.html
+++ b/html/index.html
@@ -57,7 +57,7 @@
                                     <li><a href="#about-section" class="nav-link">About Us</a></li>
                                     <li><a href="#" class="nav-link">F.A.Q</a></li>
                                     <li><button type="button" class="btn btn-dark" data-toggle="modal" data-target="#logInModal">Log In</button></li>
-                                    <li><button type="button" class="btn btn-light" data-toggle="modal" data-target="#registerModal">Sign Up</button></li>
+                                    <li><button type="button" class="btn btn-light" data-toggle="modal" data-target="#registerModal">Register</button></li>
                                 </ul>
                             </nav>
                         </div>
@@ -67,42 +67,58 @@
             </header>
 
             <!-- LogIn Modal -->
-            <div class="modal fade" id="logInModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal fade" id="logInModal" tabindex="-1" role="dialog" aria-labelledby="loginModalLabel" aria-hidden="true">
               <div class="modal-dialog" role="document">
                 <div class="modal-content">
                   <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Log In.</h5>
+                    <h5 class="modal-title" id="loginModalLabel">LOG IN</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                       <span aria-hidden="true">&times;</span>
                     </button>
                   </div>
                   <div class="modal-body">
-                    Fill in this modal with Log In form, please.
-                  </div>
-                  <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Log In</button>
+                    <form>
+                        <div class="form-group">
+                          <label for="inputUsername">Username</label>
+                          <input type="text" class="form-control" id="inputUsername" placeholder="Enter Username">
+                        </div>
+                        <div class="form-group">
+                          <label for="inputPassword">Password</label>
+                          <input type="password" class="form-control" id="inputPassword" placeholder="Enter Password">
+                        </div>
+                        <button type="submit" class="btn btn-primary">Log In</button>
+                      </form>
                   </div>
                 </div>
               </div>
             </div>
 
             <!-- Register Modal -->
-            <div class="modal fade" id="registerModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal fade" id="registerModal" tabindex="-1" role="dialog" aria-labelledby="regisModalLabel" aria-hidden="true">
               <div class="modal-dialog" role="document">
                 <div class="modal-content">
                   <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Register an Account.</h5>
+                    <h5 class="modal-title" id="regisModalLabel">REGISTER</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                       <span aria-hidden="true">&times;</span>
                     </button>
                   </div>
                   <div class="modal-body">
-                    Fill in this modal with Register form, please.
-                  </div>
-                  <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Register</button>
+                    <form>
+                        <div class="form-group">
+                          <label for="inputUsername">Username</label>
+                          <input type="text" class="form-control" id="inputUsername" placeholder="Enter Username">
+                        </div>
+                        <div class="form-group">
+                          <label for="inputPassword">Password</label>
+                          <input type="password" class="form-control" id="inputPassword" placeholder="Enter Password">
+                        </div>
+                        <div class="form-group">
+                            <label for="inputPassword">Re-enter Password</label>
+                            <input type="password" class="form-control" id="reInputPassword" placeholder="Re-enter Password">
+                        </div>
+                        <button type="submit" class="btn btn-primary">Register</button>
+                      </form>
                   </div>
                 </div>
               </div>
