--- a/html/index.html
+++ b/html/index.html
@@ -134,9 +134,10 @@
                     <div class="single-text owl-carousel">
                       <div class="slide">
                         <h1 class="text-uppercase" data-aos="fade-up">Chatting Solutions</h1>
-                        <p class="mb-5 desc"  data-aos="fade-up" data-aos-delay="100">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae minima delectus accusamus accusantium deleniti libero excepturi porro illo.</p>
+                        <p class="mb-5 desc"  data-aos="fade-up" data-aos-delay="100">Chattr goves you a freedom to chat with any people at any time!</p>
+                        <p class="mb-5 desc"  data-aos="fade-up" data-aos-delay="100">Make private rooms to chat with your friends!</p>
                         <div data-aos="fade-up" data-aos-delay="100">
-                          <a href="#" class="btn  btn-success mr-2 mb-2">Start Chatting</a>
+                          <a href="#" class="btn  btn-success mr-2 mb-2">Register Now!</a>
                         </div>
                       </div>
 
@@ -149,11 +150,11 @@
                       </div>
 
                       <div class="slide">
-                        <h1 class="text-uppercase" data-aos="fade-up">Chatting</h1>
-                        <p class="mb-5 desc" data-aos="fade-up" data-aos-delay="100">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                          Repudiandae minima delectus accusamus accusantium deleniti libero excepturi porro illo.</p>
+                        <h1 class="text-uppercase" data-aos="fade-up">Free Messaging anytime and anywhere using your browser</h1>
+                        <p class="mb-5 desc" data-aos="fade-up" data-aos-delay="100">Send free one-on-one and group texts to your friends
+                          anytime, anywhere on the web!</p>
                         <div data-aos="fade-up" data-aos-delay="100">
-                          <a href="#" class="btn  btn-success mr-2 mb-2">Start Chatting</a>
+                          <a href="#" class="btn  btn-success mr-2 mb-2">About Us</a>
                         </div>
                       </div>
 
@@ -176,7 +177,9 @@
                     <div class="row mb-5 justify-content-center">
                         <div class="col-md-8 text-center">
                             <h2 class="section-title mb-3" data-aos="fade-up" data-aos-delay="">About Us</h2>
-                            <p class="lead" data-aos="fade-up" data-aos-delay="100">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus minima neque tempora reiciendis.</p>
+                              <p class="lead" data-aos="fade-up" data-aos-delay="100">We believe that everyone must and can connect with everybody. Chattr gives you an ability to connect with anyone on the public chat.</p>
+                              <p class="lead" data-aos="fade-up" data-aos-delay="100">We also gives you a selection to make your own room and chat with your friends!</p>
+                              <p >Upload and download file while chatting! </p>
                         </div>
                     </div>
                     <div class="row">
@@ -204,19 +207,19 @@
                         <div class="col-md-6 col-lg-4 mb-4" data-aos="fade-up" data-aos-delay="">
                             <div class="team-member">
                                 <div class="p-3">
-                                  <h3 style="color:#39ff14">Kaiara Spencer</h3>
+                                  <h3 style="color:#39ff14">Dave Hong</h3>
                                   <span class="position">Programmer</span>
                                 </div>
                             </div>
                             <div class="team-member">
                                 <div class="p-3">
-                                  <h3 style="color:#39ff14">Kaiara Spencer</h3>
+                                  <h3 style="color:#39ff14">Sebastian Aldi</h3>
                                   <span class="position">Programmer</span>
                                 </div>
                             </div>
                             <div class="team-member">
                                 <div class="p-3">
-                                    <h3 style="color:#39ff14">Kaiara Spencer</h3>
+                                    <h3 style="color:#39ff14">Winston Renatan</h3>
                                     <span class="position">Programmer</span>
                                 </div>
                             </div>
@@ -224,13 +227,13 @@
                         <div class="col-md-6 col-lg-4 mb-4" data-aos="fade-up" data-aos-delay="100">
                           <div class="team-member">
                             <div class="p-3">
-                              <h3 style="color:#39ff14">Dave Simpson</h3>
+                              <h3 style="color:#39ff14">Noach Nathanael</h3>
                               <span class="position">Web Designer</span>
                             </div>
                           </div>
                             <div class="team-member">
                             <div class="p-3">
-                              <h3 style="color:#39ff14">Kaiara Spencer</h3>
+                              <h3 style="color:#39ff14">Matius Ebenhaezer</h3>
                               <span class="position">Programmer</span>
                             </div>
                           </div>
@@ -238,19 +241,19 @@
                         <div class="col-md-6 col-lg-4 mb-4" data-aos="fade-up" data-aos-delay="200">
                           <div class="team-member">
                             <div class="p-3">
-                              <h3 style="color:#39ff14">Ben Thompson</h3>
+                              <h3 style="color:#39ff14">Ferinzhy Halik</h3>
                               <span class="position">Data Base Administrator</span>
                             </div>
                           </div>
                             <div class="team-member">
                             <div class="p-3">
-                              <h3 style="color:#39ff14">Kaiara Spencer</h3>
+                              <h3 style="color:#39ff14">Alexandro Mika</h3>
                               <span class="position">Programmer</span>
                             </div>
                           </div>
                             <div class="team-member">
                             <div class="p-3">
-                              <h3 style="color:#39ff14">Kaiara Spencer</h3>
+                              <h3 style="color:#39ff14">Herbie Sinadia</h3>
                               <span class="position">Programmer</span>
                             </div>
                           </div>
@@ -266,7 +269,9 @@
                           <div class="row">
                           <div class="col-md-5">
                               <h2 class="footer-heading mb-4">About Us</h2>
-                              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque facere laudantium magnam voluptatum autem. Amet aliquid nesciunt veritatis aliquam.</p>
+                              <p>We believe that everyone must and can connect with everybody. Chattr gives you an ability to connect with anyone on the public chat.</p>
+                              <p>We also gives you a selection to make your own room and chat with your friends!</p>
+                              <p>Upload and download file while chatting! </p>
                           </div>
                           <div class="col-md-3 ml-auto">
                               <h2 class="footer-heading mb-4">Quick Links</h2>
