Complete changes on index.html (more changes are to be considered)

--- a/html/index.html
+++ b/html/index.html
@@ -208,7 +208,7 @@
                             <div class="team-member">
                                 <div class="p-3">
                                   <h3 style="color:#39ff14">Dave Hong</h3>
-                                  <span class="position">Programmer</span>
+                                  <span class="position">Main Programmer</span>
                                 </div>
                             </div>
                             <div class="team-member">
@@ -228,13 +228,13 @@
                           <div class="team-member">
                             <div class="p-3">
                               <h3 style="color:#39ff14">Noach Nathanael</h3>
-                              <span class="position">Web Designer</span>
+                              <span class="position">Database Administrator</span>
                             </div>
                           </div>
                             <div class="team-member">
                             <div class="p-3">
                               <h3 style="color:#39ff14">Matius Ebenhaezer</h3>
-                              <span class="position">Programmer</span>
+                              <span class="position">F.A.Q and Web Designer</span>
                             </div>
                           </div>
                         </div>
@@ -242,19 +242,19 @@
                           <div class="team-member">
                             <div class="p-3">
                               <h3 style="color:#39ff14">Ferinzhy Halik</h3>
-                              <span class="position">Data Base Administrator</span>
+                              <span class="position">Web Developer and Designer</span>
                             </div>
                           </div>
                             <div class="team-member">
                             <div class="p-3">
                               <h3 style="color:#39ff14">Alexandro Mika</h3>
-                              <span class="position">Programmer</span>
+                              <span class="position">Icon Creator</span>
                             </div>
                           </div>
                             <div class="team-member">
                             <div class="p-3">
                               <h3 style="color:#39ff14">Herbie Sinadia</h3>
-                              <span class="position">Programmer</span>
+                              <span class="position">Cursor Designer</span>
                             </div>
                           </div>
                         </div>
