--- a/html/chattr.html
+++ b/html/chattr.html
@@ -153,6 +153,13 @@
                     data-toggle="modal"
                     data-target="#uploadModal"
                     title="Upload A File"></button>
+                <button type="button"
+                    class="btn btn-primary fas fa-comments"
+                    style="border-radius: .4em; margin-left: 8px;"
+                    data-toggle="modal"
+                    data-target="#privateChatModal"
+                    title="Send a Private Message."
+                    id="privateChatButton"></button>
             </span>
         </form>
 
@@ -175,6 +182,37 @@
                                 <button type="button" class="btn btn-success" id="submitUpload">Upload File</button>
                             </form>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Private Chat Modal -->
+        <div class="modal fade" id="privateChatModal" tabindex="-1" role="dialog" aria-labelledby="privateChatModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-lg" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="privateChatModalLabel">Send a Private Message</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body container-fluid">
+                        <i>*This feature is useful for giving out room passwords to your friends.</i>
+
+                        <form>
+                            <div class="input-group mt-3 mb-3">
+                                <div class="input-group-prepend">
+                                <div class="input-group-text">@</div>
+                                </div>
+                                <input type="text" class="form-control" id="privateMessageUsername" oninput="checkPrivateMessageForm();" placeholder="Username">
+                            </div>
+                            <input type="text" class="form-control mb-3" id="privateMessage" oninput="checkPrivateMessageForm();" placeholder="Type a message...">
+                        
+                            <button type="submit" class="btn btn-success" id="sendPrivateMessage" disabled>Send</button>
+                            <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+                        </form>
+                    
                     </div>
                 </div>
             </div>
