--- a/html/chattr.html
+++ b/html/chattr.html
@@ -22,9 +22,11 @@
         <link href="../node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" type="text/css">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="../css/chattr.css">
+		<link rel="stylesheet" type="text/css" href="../css/chattr-cursor.css">
     </head>
 
     <body>
+	<div class="body-container">
         <!-- <div id="header" class="header container-fluid bg-dark">
             <span class="title">> Waiting for Homepage</span>
             <span class="title fade">_</span>
@@ -142,7 +144,8 @@
                 <div id="messages" class="container col-10 overflow-auto"></div>
             </div>
         </div>
-        
+        <div class="empty"></div>
+		<div class="boxWrapper">
         <form id="messageForm" class="messageForm input-group bg-dark">
             <input class="form-control" style="border-radius: .4em;" id="messageBox" autocomplete="off" placeholder="Send a message...."/>
             <span class="input-group-btn">
@@ -217,6 +220,6 @@
                 </div>
             </div>
         </div>
-
+	</div>
     </body>
 </html>
