--- a/html/index.html
+++ b/html/index.html
@@ -18,6 +18,7 @@
         <link rel="stylesheet" href="../homepage/fonts/flaticon/font/flaticon.css">
         <link rel="stylesheet" href="../homepage/css/aos.css">
         <link rel="stylesheet" href="../homepage/css/style.css">
+		<link rel="stylesheet" href="../homepage/css/cursors.css">
     </head>
     
     <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
@@ -99,9 +100,11 @@
                 <div class="modal-content">
                   <div class="modal-header">
                     <h5 class="modal-title" id="regisModalLabel">REGISTER</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                      <span aria-hidden="true">&times;</span>
-                    </button>
+					<div class="wrapper">
+						<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+						  <span aria-hidden="true">&times;</span>
+						</button>
+					</div>
                   </div>
                   <div class="modal-body">
                     <form action="regis" method="POST">
