--- a/html/index.html
+++ b/html/index.html
@@ -18,7 +18,7 @@
         <link rel="stylesheet" href="../homepage/fonts/flaticon/font/flaticon.css">
         <link rel="stylesheet" href="../homepage/css/aos.css">
         <link rel="stylesheet" href="../homepage/css/style.css">
-		<link rel="stylesheet" href="../homepage/css/cursors.css">
+		<link rel="stylesheet" href="../css/homepage-cursors.css">
     </head>
     
     <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
