--- a/html/HelpPage.html
+++ b/html/HelpPage.html
@@ -9,7 +9,7 @@
 		
 		<!-- CSS -->
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-		
+		<link rel="stylesheet" type="text/css" href="../css/helppage-cursors.css">
 		<style>
 		/* CUSTOM SCROLL BAR */
 		/* width */
